Failed attempt to fix PTNT rendering